--- a/Manual/local.bib
+++ b/Manual/local.bib
@@ -64,12 +64,12 @@
 
 @MISC {           ad02,
   author        = {{AD02 (part of the Harwell Subroutine Library)}}, 
-  howpublished  = {\url{ftp://ftp.numerical.rl.ac.uk/pub/oldhsl/hsl2002.pdf}}
+  howpublished  = {\url{http://www.hsl.rl.ac.uk/archive/specs/hsl_ad02.pdf}}
 } 
 
 @MISC {           actsWeb,
   author        = {{Adjoint Compiler Technology \& Standards (ACTS)}}, 
-  howpublished  = {\url{http://www.autodiff.org/ACTS}}
+  howpublished  = {\url{http://www.nsf.gov/awardsearch/showAward?AWD_ID=0205590}}
 } 
 
 @MISC {           mitgcmWeb,
@@ -78,7 +78,7 @@
 } 
 @MISC {           neosWeb,
   author        = {{Network Enhance Optimization Server (NEOS)}},
-  howpublished  = {\url{http://www-neos.mcs.anl.gov/}}
+  howpublished  = {\url{http://www.neos-server.org/}}
 } 
 
 @MISC {           openadWeb,
@@ -88,7 +88,7 @@
 
 @MISC {           oaWeb,
   author        = {{OpenAnalysis}},
-  howpublished  = {\url{http://www-unix.mcs.anl.gov/OpenAnalysisWiki/moin.cgi}}
+  howpublished  = {\url{http://openanalysis.berlios.de/}}
 } 
 
 @MISC {           adicWeb,
@@ -98,7 +98,7 @@
 
 @MISC {           adolcWeb,
   author        = {{ADOL-C}},
-  howpublished  = {\url{http://www.math.tu-dresden.de/~adol-c/}}
+  howpublished  = {\url{https://projects.coin-or.org/ADOL-C}}
 } 
 
 @MISC {           rapsodiaWeb,
@@ -168,7 +168,7 @@
 
 @MISC {           roseWeb,
   author        = {{ROSE}},
-  howpublished  = {\url{http://www.llnl.gov/CASC/rose/}}
+  howpublished  = {\url{http://rosecompiler.org/}}
 } 
 
 @MISC {           xaifWeb,
